@@ -1,6 +1,8 @@
 =Version 1.3.2=
   * major cleanup
   * add nodefinder_ec2
+  * add node_type configuration to control the distributed erlang
+    node connection type
 
 =Version 0.2.1=
   * rerelease with upgraded fw-template-erlang
